--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,14 @@ jobs:
       - name: setup-java
         uses: actions/setup-java@v5
         with:
-          java-version: 17
+          java-version: 21
           distribution: adopt
 
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v5
 
       - name: Lint
-        run: ./gradlew spotlessCheck --scan
+        run: ./gradlew spotlessCheck
+
+      - name: Build plugin
+        run: ./gradlew buildPlugin
