update release artifact uploading

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -48,5 +48,5 @@ jobs:
           GH_TOKEN: ${{ github.token }}
         run: |
           gh release upload "${{ github.event.release.tag_name }}" \
-            build/distributions/*.zip \
+            build/distributions/*-signed.zip \
             --clobber
