feature: Add resource hover tooltip and unused resource detection
Extract shared ResourceResolver from ResourceGotoDeclarationHandler to
enable reuse across multiple features.

Hover Tooltip (DocumentationProvider):
- Shows string value, string-array items, or plural variants on Ctrl+Q/hover
- Displays file location and locale information
- Shows translations side-by-side for multi-locale resources

Unused Resource Detection (LocalInspectionTool):
- Highlights unused <string>, <string-array>, and <plurals> in XML
- Searches Kotlin files for Res.string.*, Res.array.*, Res.plurals.* references
- Provides "Remove unused resource" quick fix
- Styled with LIKE_UNUSED_SYMBOL for standard gray-out appearance

37 tests passing (18 existing + 10 documentation + 9 inspection).

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -36,6 +36,18 @@
             implementation="dev.jordond.composeresourceskit.ComposeResourcesStartupActivity"/>
 
         <gotoDeclarationHandler implementation="dev.jordond.composeresourceskit.ResourceGotoDeclarationHandler"/>
+
+        <lang.documentationProvider
+            language="kotlin"
+            implementationClass="dev.jordond.composeresourceskit.ComposeResourceDocumentationProvider"/>
+
+        <localInspection
+            language="XML"
+            implementationClass="dev.jordond.composeresourceskit.inspection.UnusedComposeResourceInspection"
+            displayName="Unused Compose resource"
+            groupName="Compose Resources Kit"
+            enabledByDefault="true"
+            level="WARNING"/>
     </extensions>
 
     <extensions defaultExtensionNs="org.jetbrains.kotlin">
