--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -4,14 +4,16 @@
     <vendor url="https://jordond.dev">jordond</vendor>
 
     <description><![CDATA[
-        <p>Ever add a string to your <code>strings.xml</code>, switch back to your Kotlin file, and
-        get <b>Unresolved reference</b>? This plugin fixes that. It watches your
-        <code>composeResources</code> directories and automatically runs
-        <code>generateResourceAccessors</code> whenever a file changes. Make an edit, wait a couple
-        seconds, and the accessors are there &mdash; Compose Previews re-render and everything.</p>
+        <p>A collection of tools for working with Compose Multiplatform resources. Automated resource accessor generation, resource navigation, and management.</p>
 
-        <p>Multi-module and source-set aware. Includes a status bar widget with quick actions.
-        Configure under <b>Settings &gt; Tools &gt; Compose Resources Kit</b>.</p>
+        <h3>Features</h3>
+        <ul>
+            <li><b>Automatic Resource Accessors</b>: Watches your <code>composeResources</code> directories and automatically runs <code>generateResourceAccessors</code> on file changes.</li>
+            <li><b>Unused Resource Detection</b>: Highlights unused XML resources (strings, plurals, etc.) and provides a quick fix to remove them safely.</li>
+            <li><b>Resource Navigation</b>: Go to declaration support from Kotlin code to XML definitions and find usages from XML back to Kotlin.</li>
+        </ul>
+
+        <p>Configure under <b>Settings &gt; Tools &gt; Compose Resources Kit</b>.</p>
     ]]></description>
 
     <depends>com.intellij.modules.platform</depends>
@@ -36,10 +38,6 @@
             implementation="dev.jordond.composeresourceskit.ComposeResourcesStartupActivity"/>
 
         <gotoDeclarationHandler implementation="dev.jordond.composeresourceskit.ResourceGotoDeclarationHandler"/>
-
-        <lang.documentationProvider
-            language="kotlin"
-            implementationClass="dev.jordond.composeresourceskit.ComposeResourceDocumentationProvider"/>
 
         <localInspection
             language="XML"
