Add unnecessary Android escape inspection for Compose resources
Detects \', \", \@, \? escapes that are Android-specific and not
needed in Compose Multiplatform resources. Provides quick fixes
to remove individual or all unnecessary escapes.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -56,6 +56,14 @@
             level="ERROR"/>
 
         <localInspection
+            language="XML"
+            implementationClass="dev.jordond.composeresourceskit.inspection.ComposeResourceEscapeInspection"
+            displayName="Unnecessary Android escape in Compose resource"
+            groupName="Compose Resources Kit"
+            enabledByDefault="true"
+            level="WARNING"/>
+
+        <localInspection
             language="kotlin"
             implementationClass="dev.jordond.composeresourceskit.inspection.ComposeResourceArgumentInspection"
             displayName="Compose resource format argument mismatch"
